H1 tag and Works on mobile now

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - A Pen by Saamer M</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charSet="UTF-8"/>
+  <title>Mom's Spaghetti</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
+<h1>Mom's Spaghetti</h1>
 <!-- partial:index.partial.html -->
 <a id='main' href = 'https://www.momsspaghetti.com'>
   <div class='before'></div>
