--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Mom's Spaghetti</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
 </head>
 <body>
 <h1>Mom's Spaghetti</h1>
@@ -131,7 +134,10 @@
 </a>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js'></script>
+<script  src="./script.js"></script>
+<script type="text/javascript" src="./jquery-3.5.1.min.js"></script>
+<script  src="./analytics.js"></script>
 
 </body>
 </html>
