Meta description, image, sitemap fix
Add

--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
   <link rel="manifest" href="/favicon/site.webmanifest">
+  <!-- Added later -->
+  <meta name="description" content="Fan page created for Eminem's Mom's Spaghetti restaurant in Detroit at the Union Assembly, in case the any misspells the website" />
+  <meta name="keywords" content="Fan page Eminem Mom Spaghetti Restaurant Detroit Union Assembly" />
+  <link rel="canonical" href="http://www.momspaghetti.com/">  
+  <meta property="og:site_name" content="Mom's Spaghetti">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Mom's Spaghetti">
+  <meta name="twitter:description" content="Fan page created for Eminem's Mom's Spaghetti restaurant in Detroit at the Union Assembly, in case the any misspells the website">
+  <meta name="twitter:image" content="https://momspaghetti.com/images/author.png">
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Mom's Spaghetti">
+  <meta itemprop="description" content="Fan page created for Eminem's Mom's Spaghetti restaurant in Detroit at the Union Assembly, in case the any misspells the website">
+  <meta itemprop="image" content="https://momspaghetti.com/images/author.png">
+  <!-- Facebook Open Graph -->
+  <meta property="og:url" content="https://momspaghetti.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Mom's Spaghetti">
+  <meta property="og:description" content="Fan page created for Eminem's Mom's Spaghetti restaurant in Detroit at the Union Assembly, in case the any misspells the website">
+  <meta property="og:image" content="https://momspaghetti.com/images/author.png">
+  <meta name="robots" content="noodp,noydir">
+    <!-- Facebook Open Graph end -->
+
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
+  <meta name="author" content="Saamer Mansoor">
+  <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+  
+  <!-- Favicons -->
+  <link rel="shortcut icon" href="images/logo-footer.png">
+
 </head>
 <body>
 <h1>Mom's Spaghetti</h1>
