SSL Https Cert installed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Added later -->
   <meta name="description" content="Fan page created for Eminem's Mom's Spaghetti restaurant in Detroit at the Union Assembly, in case the any misspells the website" />
   <meta name="keywords" content="Fan page Eminem Mom Spaghetti Restaurant Detroit Union Assembly" />
-  <link rel="canonical" href="http://www.momspaghetti.com/">  
+  <link rel="canonical" href="https://www.momspaghetti.com/">  
   <meta property="og:site_name" content="Mom's Spaghetti">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
